<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="9dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/Class"
            android:layout_width="250dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#A3CB37"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:hint="@string/cce1"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Branch"
            android:layout_width="250dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#A3CB37"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:hint="@string/cce2"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Subject"
            android:layout_width="250dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#A3CB37"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:ems="10"
            android:hint="@string/cce3"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Roll"
            android:layout_width="250dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#A3CB37"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ase1"
            android:inputType="number" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="250dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#A3CB37"
            android:layout_height="30dp"
            android:textColor="#000"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ase2"
            android:textAllCaps="true"
            android:inputType="textCapCharacters" />

        <Button
            android:id="@+id/Add"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/asb1" />


        <Button
            android:id="@+id/Delete"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/asb3"
            android:background="@drawable/custom_button"
            tools:text="@string/asb3" />

        <Button
            android:id="@+id/DeleteAll"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/asb4" />


        <Button
            android:id="@+id/Done"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/asb2" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>